--- a/src/main/resources/templates/claimsEmployee.html
+++ b/src/main/resources/templates/claimsEmployee.html
@@ -166,7 +166,7 @@
                             <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
                         </div>
                         <div class="pr-3 pt-3">
-                            <button type="submit" class="btn btn-success">Submit</button>
+                            <button type="submit" class="btn btn-success" id="createBtn">Submit</button>
                         </div>
                     </div>
                 </form>
@@ -178,6 +178,7 @@
 
 </body>
 </html>
+
 <script>
     $(document).on('click','#save-btn',function(e){
         currentPassword = $("#empCurrPass").val();
